switched page contents to container-fluid to avoid horizontal overflow

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -2,6 +2,11 @@
     margin-top: 20px;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 #banner {
     border-bottom: none;
     margin-top: -20px;
