--- a/client/components/dailies/dailies.scss
+++ b/client/components/dailies/dailies.scss
@@ -9,4 +9,5 @@
 
 .task-list {
 	-webkit-padding-start: 15px;
+	margin-right: 10px;
 }
